kubernetes/idp/crossplane/vpc-crossplane.yaml
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: crossplane-prod-public-route
spec:
  forProvider:
    region: us-east-1
    routeTableIdRef:
      name: crossplane-prod-public-rt
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: crossplane-prod-igw
  providerConfigRef:
    name: default
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: crossplane-prod-private-route
spec:
  forProvider:
    region: us-east-1
    routeTableIdRef:
      name: crossplane-prod-private-rt
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: crossplane-prod-nat
  providerConfigRef:
    name: default
